--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           rel = "stylesheet" >
 
     <!-- Vendor CSS Files -->
-    <link href = "node_modules/bootstrap/dist/css/bootstrap.min.css"
+    <link href = "/node_modules/bootstrap/dist/css/bootstrap.min.css"
           rel="stylesheet" />
-    <link href = "node_modules/aos/dist/aos.min.css"
+    <link href = "/node_modules/aos/dist/aos.min.css"
           rel = "stylesheet" />
-    <link href="node_modules/owl.carousel/dist/assets/owl.carousel.min.css"
+    <link href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css"
           rel="stylesheet" />
     <link href = "/Content/icofont.min.css"
           rel = "stylesheet" >
@@ -899,31 +899,31 @@
 
     <!--Vendor JS Files-->
     <!--jQuery may be deprecated when Bootstrap 5 is fully implemented-->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"
             type="text/javascript"></script>
-    <script src="node_modules/@popperjs/core/dist/umd/popper.min.js"
+    <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js"
             type="text/javascript"></script>
-    <script src="node_modules/jquery/dist/jquery.min.js"
+    <script src="/node_modules/jquery/dist/jquery.min.js"
             type="text/javascript"></script>
-    <script src="node_modules/jquery.easing/jquery.easing.min.js"
+    <script src="/node_modules/jquery.easing/jquery.easing.min.js"
             type="text/javascript"></script>
-    <script src="node_modules/validate.js/validate.min.js"
+    <script src="/node_modules/validate.js/validate.min.js"
             type="text/javascript"></script>
-    <script src="node_modules/waypoints/lib/jquery.waypoints.min.js"
+    <script src="/node_modules/waypoints/lib/jquery.waypoints.min.js"
             type="text/javascript"></script>
     <script src="/Scripts/counterup.min.js"
             type="text/javascript"></script>
-    <script src="node_modules/isotope-layout/dist/isotope.pkgd.min.js"
+    <script src="/node_modules/isotope-layout/dist/isotope.pkgd.min.js"
             type="text/javascript"></script>
-    <script src="lib/jquery.isotope/isotope.pkgd.min.js"
+    <script src="/node_modules/isotope-layout/dist/isotope.pkgd.min.js"
             type="text/javascript"></script>
-    <script src="node_modules/venobox/venobox/venobox.min.js"
+    <script src="/node_modules/venobox/venobox/venobox.min.js"
             type="text/javascript"></script>
-    <script src="node_modules/owl.carousel/dist/owl.carousel.min.js"
+    <script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"
             type="text/javascript"></script>
-    <script src="node_modules/typed.js/lib/typed.min.js"
+    <script src="/node_modules/typed.js/lib/typed.min.js"
             type="text/javascript"></script>
-    <script src="node_modules/aos/dist/aos.min.js"
+    <script src="/node_modules/aos/dist/aos.min.js"
             type="text/javascript"></script>
     <!-- Template Main JS File -->
     <script src="/Scripts/main.min.js"></script>
