--- a/index.html
+++ b/index.html
@@ -877,9 +877,7 @@
     </div>
 
     <!--Vendor JS Files-->
-    <script src="./Scripts/main.js"
-            <!--type="module"></script>
-    <script src="/node_modules/jquery/dist/jquery.min.js"
+    <!-- <script src="/node_modules/jquery/dist/jquery.min.js"
             type="module"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"
             type="module"></script>
@@ -903,9 +901,9 @@
             type="module"></script>
     <script src="/node_modules/aos/dist/aos.js"
             type="module"></script>-->
-    <!-- Template Main JS File -->
-    <script src="/Scripts/main.min.js" defer></script>
 
+    <!-- Template Main JS File -->
+<script src="./Scripts/main.js"></script>
     <!--Load Emailsjs.html into the modal on button click-->
     <script type="text/javascript" defer>
         $('#btnCallModal').on('click',
